DT-786 review comments addressed.